<resources>
    <string name="Do_you_suffer">هل تعاني من امراض مزمنة ؟</string>
    <string name="Subspecialties">التخصصات الفرعية</string>
    <string name="What_family_history">ما هو تاريخ العائلة المرضي ؟</string>
    <string name="What_medicines_take">ما هي الادوية التي تتناولها ؟</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acceptTerms">انا موافق علي سياسة الخصوصية و الشروط والاحكام تطبيق استشارة . .</string>
    <string name="activateTerms">نحن فقط نرسل لك رمز التحقق. تحقق من الهاتف الخاص بك للحصول عليها.</string>
    <string name="add">اضافة</string>
    <string name="add_comment">اضافة تعليق</string>
    <string name="alarm">اعمل تذكير بمعياد الدواء</string>
    <string name="alarm_doc">منبه الدواء</string>
    <string name="alarm_explore">صحتك تهمنا</string>
    <string name="allergies">الحساسيات</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anonimous">Anonymous User</string>
    <string name="answer">اتكلم عن حالتك بالاجابة علي التالي :</string>
    <string name="any_special">لا تعرف اي تخصص تختار ؟</string>
    <string name="app_name">Hospital</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attach">ارفق الاشعة او الفحوصات الطبية</string>
    <string name="available">المواعيد المتاحة</string>
    <string name="availablet">Avalilable</string>
    <string name="bill">الفاتورة</string>
    <string name="blood">فئه الدم</string>
    <string name="board1">استشارة مع الدكتور</string>
    <string name="board_s1">        احصل علي استشارة طبية موثوقة بايدي افضل الاطباء في الوطن العربي بخصوصية تامة خلال دقائق. </string>
    <string name="book_consult">احجز استشارة الان</string>
    <string name="book_now">احجز استشارة الان</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">الغاء</string>
    <string name="cancel_cons">الغاء الاستشارة</string>
    <string name="changePass">تغير كلمة المرور</string>
    <string name="change_lang">تغير اللغة</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="chronicـdiseases">Chronic Diseases</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">close</string>
    <string name="code">كود التحقق</string>
    <string name="codeSent">كود الارسال</string>
    <string name="condition">يجب الا يقل كلمة المرور عن ٨ احرف .</string>
    <string name="consultations">%1$s استشارات</string>
    <string name="contactUs">اتصل بنا</string>
    <string name="continuee">استمرار</string>
    <string name="createAccount"> انضم الان</string>
    <string name="dangerous">طوارئ</string>
    <string name="data">البيانات المرضية</string>
    <string name="data_added_successfully">data added successfully</string>
    <string name="date">تاريخ الميلاد</string>
    <string name="dateExam">تاريخ الفحص</string>
    <string name="dateIllness">تاريخ معرفة المرض</string>
    <string name="dateMedicine">تاريخ بداية تناول الدواء</string>
    <string name="dateProcess">تاريخ العملية</string>
    <string name="desc">الوصف</string>
    <string name="diseases">الامراض المزمنة</string>
    <string name="dismiss">dismiss</string>
    <string name="doc_instructions">تعليمات الدكتور</string>
    <string name="doctor">دكتور</string>
    <string name="doctorDrugs">الادوية المرسلة من الدكتور</string>
    <string name="doctorMsg">رسائل الدكتور</string>
    <string name="doctor_instructions">تعليمات الدكتور</string>
    <string name="doctor_profile">صفحة الدكتور</string>
    <string name="doctora">دكتورة</string>
    <string name="doctors">الاطباء</string>
    <string name="drugs">الادوية</string>
    <string name="edit">تعديل</string>
    <string name="edit_profile">تعديل البيانات</string>
    <string name="edt_profile">تعديل البيانات الشخصية</string>
    <string name="email">البريد الالكتروني</string>
    <string name="error_icon_content_description">Error</string>
    <string name="estshara">استشارتى</string>
    <string name="estshary">استشاري</string>
    <string name="examinations">الفحوصات الطبية</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="family_history">Family History</string>
    <string name="favorite">الاهتمامات والتفضيلات</string>
    <string name="female">أنثى</string>
    <string name="filters">حدد بحثك</string>
    <string name="firstName">الاسم الاول</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="forget_pass">هل نسيت كلمة المرور؟</string>
    <string name="from">%1$s From :</string>
    <string name="go_search">ابحث</string>
    <string name="haveAccount">هل تمتلك حساب مسبقاً ؟ </string>
    <string name="hello">مرحبا</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="help">مساعدة</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="high">الطول</string>
    <string name="historyFamily">تاريخ العائلة المرضي</string>
    <string name="home">الرئيسية</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="info_alarm">يمكنك الان انشاء تنبيهات بيمعاد الدواء بكل سهولة . </string>
    <string name="info_attach1">لا تستخدم اي وسايل تواصل خارجية</string>
    <string name="info_attach2">لا تضع روابط خارجية قم بالاهتمام باكمال حسابك .</string>
    <string name="info_explore">استشارات عن بعد مع اطباء خبراء من جميع انحاء العالم .</string>
    <string name="info_profile">المعلومات الشخصية</string>
    <string name="info_upload">من فضلك قم بتحميل صورتك الشخصية للظهور بشكل افضل .</string>
    <string name="informations">معلومات عني</string>
    <string name="item_view_role_description">Tab</string>
    <string name="joinNow">اشترك الان</string>
    <string name="karaba">صلة القرابة</string>
    <string name="khool">شرب الكحول</string>
    <string name="label">Label</string>
    <string name="lastName">الاسم الاخير</string>
    <string name="loading">Loading....</string>
    <string name="login">تسجيل الدخول</string>
    <string name="login_hint">غير مسموح لك الاطلاع علي هذه الصفحه دون تسجيل الدخول</string>
    <string name="login_intro">يمكنك الدخول بالبريد الالكتروني او رقم الهاتف المسجل  من قبل الشركة . </string>
    <string name="logout">تسجيل الخروج</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="male">ذكر</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="more">المزيد</string>
    <string name="notification">التنبيهات</string>
</resources>